--- a/css/theme.css
+++ b/css/theme.css
@@ -62,7 +62,6 @@ html.transition *:after {
 
 @media(min-width: 768px) {
     .toggleMode {
-       top: 0.5rem;
+       top: -0.5rem;
     }
-
 }
